<resources>
    <string name="English">English</string>
    <string name="Grench">Polish</string>
    <string name="Over_Charging">Over Current When Charging</string>
    <string name="Over_Discharging">Over Current When Discharging</string>
    <string name="Over_Protection">Over Discharge Protection</string>
    <string name="Over_Voltage_Protection">Over Voltage Protection</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_language_pref_key">app_language_pref_key</string>
    <string name="app_loaction_on">open</string>
    <string name="app_loaction_server">Scanning nearby Bluetooth needs to start location service</string>
    <string name="app_name">BMS</string>
    <string name="app_open_blue">Open</string>
    <string name="app_open_blue_tips">Bluetooth is not turned on, please turn on Bluetooth</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="bad">Bad</string>
    <string name="balancing">BALANCING</string>
    <string name="bluetooth_connection_successful">Bluetooth connection successful</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="capacity">Capacity:</string>
    <string name="ccle_Life">Cycle Life</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charge">Charge</string>
    <string name="charging">Charging</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="current">Current:</string>
    <string name="device_Connecting">Device Connecting</string>
    <string name="device_disconnect">Device Disconnect</string>
    <string name="device_list">Device List</string>
    <string name="device_not_con">Device not connected, please select device</string>
    <string name="device_state_connecting">Connecting... Please wait!</string>
    <string name="device_unbind_success">device unbind success</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_foreground_content">Update in progress…</string>
    <string name="dfu_status_foreground_title">Device Firmware Update</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">Sure</string>
    <string name="discharge">Discharge</string>
    <string name="discharging">Discharging</string>
    <string name="dviceDisconnected">Device Disconnected</string>
    <string name="empty_view_hint">No data available</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_view_hint">Loading failed</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="good">Good</string>
    <string name="health">Health:</string>
    <string name="heating">HEATING</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="high_temperture_of_charge_and_dischange">High temperture of Charge and dischange</string>
    <string name="high_teperature_Discharging">High Teperature When Discharging</string>
    <string name="highteperature_Charging">High Teperature When Charging</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="low_temperture_of_charge_and_dischange">Low temperture of Charge and dischange</string>
    <string name="low_teperature_Charging">Low Teperature When Charging</string>
    <string name="low_teperature_Discharging">Low Teperature When Discharging</string>
    <string name="memu">Menu</string>
    <string name="module_name">base</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="mtrl_slider_range_content_description">%1$s to %2$s</string>
    <string name="no">NO</string>
    <string name="no_network_view_hint">Network anomaly</string>
    <string name="no_required_permission">no permission</string>
    <string name="openBle">Please turn on Bluetooth</string>
    <string name="over_temperature_of_fet">over temperature of FET</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="perfect">Perfect</string>
    <string name="scan">Scan</string>
    <string name="status">Status:</string>
    <string name="voltage">Voltage:</string>
</resources>