<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layout_top"
    android:background="@color/common_blank"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/dp20">
        <com.jkcq.homebike.view.CirclebarAnimatorView
            android:id="@+id/progress_circular"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"/>
        <TextView
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/common_page_color"
            android:id="@+id/tv_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:layout_centerInParent="true"/>
        <TextView
            android:textSize="22sp"
            android:textColor="@color/common_page_color"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SOC"
            android:layout_below="@+id/tv_pre"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <com.jkcq.viewlibrary.BikeItemView
        android:gravity="center_vertical"
        android:id="@+id/item_voltage"
        android:background="@drawable/shape_layout_grey_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        app:itemLeftText="@string/voltage"
        app:itemLeftTextSize="@dimen/sp16"
        app:itemRightText="0.000V"/>
    <com.jkcq.viewlibrary.BikeItemView
        android:gravity="center_vertical"
        android:id="@+id/item_capacity"
        android:background="@drawable/shape_layout_grey_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_below="@+id/item_question"
        app:itemLeftText="@string/capacity"
        app:itemLeftTextSize="@dimen/sp16"
        app:itemRightText="0.00Ah"/>
    <com.jkcq.viewlibrary.BikeItemView
        android:gravity="center_vertical"
        android:id="@+id/item_status"
        android:background="@drawable/shape_layout_grey_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        android:layout_below="@+id/item_faceback"
        app:itemLeftText="@string/status"
        app:itemLeftTextSize="@dimen/sp16"
        app:itemRightText="Standby"/>
    <com.jkcq.viewlibrary.BikeItemView
        android:gravity="center_vertical"
        android:id="@+id/item_health"
        android:background="@drawable/shape_layout_grey_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        app:itemLeftText="@string/health"
        app:itemLeftTextSize="@dimen/sp16"
        app:itemRightText="@string/perfect"/>
    <com.jkcq.viewlibrary.BikeItemView
        android:gravity="center_vertical"
        android:id="@+id/item_cycle_life"
        android:background="@drawable/shape_layout_grey_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginRight="@dimen/dp20"
        app:itemLeftText="@string/ccle_Life"
        app:itemLeftTextSize="@dimen/sp16"
        app:itemRightText="0"/>
</LinearLayout>
