<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/common_page_color1"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50">
        <TextView
            android:textColor="@color/white"
            android:id="@+id/tv_back"
            android:padding="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:drawableLeft="@mipmap/icon_white_back"
            android:layout_centerVertical="true"/>
        <TextView
            android:textSize="@dimen/sp18"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_list"
            android:layout_centerInParent="true"/>
        <TextView
            android:textColor="@color/white"
            android:id="@+id/tv_scan"
            android:padding="@dimen/dp10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="#bbbbbb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/common_text_color"
            android:background="@drawable/shape_btn_green_grey_20_bg"
            android:paddingLeft="@dimen/dp10"
            android:paddingTop="@dimen/dp5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp80"
            android:layout_marginBottom="@dimen/dp20"
            android:text="@string/device_not_con"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_device_list"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view_title"
        android:overScrollMode="never"/>
</LinearLayout>
